--- a/css/standard.css
+++ b/css/standard.css
@@ -69,11 +69,6 @@ a {
 	color:#ffffff;
 }
 
-.alpha {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 18px;
-}
-
 /*navigation*/
 
 
